modules/cd_vpc/vpc.tf
resource "aws_vpc" "cd_vpc" {
  cidr_block           = var.cidr_vpc
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name = "cd_vpc"
  }
}
